--- a/src/components/Contact-info.astro
+++ b/src/components/Contact-info.astro
@@ -1,60 +1,74 @@
 ---
-import "../../public/assets/styles/styles.css";
+import "@assets/assets/styles/styles.css";
+import santi from "@assets/assets/img/santi.png";
+import email from "@assets/assets/img/email.png";
+import phone from "@assets/assets/img/phone.png";
+import calendar from "@assets/assets/img/calendar.png";
+import location from "@assets/assets/img/location.png";
+import linkedin from "@assets/assets/img/linkedin.png";
+import github from "@assets/assets/img/github.png";
 ---
 
-<section class="section-header">
-  <h2 class="name">Santiago Bohorquez Alzate</h2>
-  <h2 class="role-name">Desarrollador Web</h2>
-</section>
-<section class="section-header-secondary">
-  <ul>
-    <li class="image-container">
-      <img class="icon-contact" src="email.png" alt="" />
-      <div class="label-container">
-        <label for="emailtag" class="labels-contact"> Email </label>
-        <label for="email" class="labels-contact"> Santyboal2@gmail.com </label>
-      </div>
-    </li>
-    <li class="image-container">
-      <img class="icon-contact" src="phone.png" alt="" />
-      <div class="label-container">
-        <label for="celulartag" class="labels-contact"> Celular </label>
-        <label for="celular" class="labels-contact"> +57 3045461170 </label>
-      </div>
-    </li>
-    <li class="image-container">
-      <img class="icon-contact" src="calendar.png" alt="" />
-      <div class="label-container">
-        <label for="cumpleañostag" class="labels-contact"> Cumpleaños </label>
-        <label for="cumpleaños" class="labels-contact"> 03-09-1998 </label>
-      </div>
-    </li>
-    <li class="image-container">
-      <img class="icon-contact" src="location.png" alt="" />
-      <div class="label-container">
-        <label for="ubicaciontag" class="labels-contact"> Ubicación </label>
-        <label for="ubicacion" class="labels-contact">
-          Medellín, Antioquia
-        </label>
-      </div>
-    </li>
-  </ul>
-  <div class="container-contact--links">
-    <a
-      href="https://www.linkedin.com/in/santiago-bohorquez-alzate-41710a1ba/"
-      target="_blank"
-      rel="noopener noreferrer"
-    >
-      <img src="linkedin.png" alt="Linkedin" class="image-link--linkedin" />
-    </a>
-  </div>
-  <div class="container-contact--links">
-    <a
-      href="https://github.com/SantiagoBA98?tab=repositories"
-      target="_blank"
-      rel="noopener noreferrer"
-    >
-      <img src="github.png" alt="Linkedin" class="image-link--github" />
-    </a>
-  </div>
-</section>
+<div class="main__aside">
+    <aside class="contact">
+        <img class="contact__photo" src={santi.src} alt="Perfil photo" />
+        <section class="contact__section--info">
+            <div class="container__personal--info">
+                <label class="name">Santiago Bohorquez Alzate</label>
+                <label class="rol">Desarollador Web</label>
+            </div>
+            <div class="container__info">
+                <div class="container__info--icon">
+                    <img src={email.src} alt="email" />
+                </div>
+                <div class="container__data">
+                    <label class="info__label">Email</label>
+                    <span class="info__span">santyboal2@gmail.com</span>
+                </div>
+            </div>
+            <div class="container__info">
+                <div class="container__info--icon">
+                    <img src={phone.src} alt="phone" />
+                </div>
+                <div class="container__data">
+                    <label class="info__label">Celular</label>
+                    <span class="info__span">+57 3045461170</span>
+                </div>
+            </div>
+            <div class="container__info">
+                <div class="container__info--icon">
+                    <img src={calendar.src} alt="calendar" />
+                </div>
+                <div class="container__data">
+                    <label class="info__label">Cumpleaños</label>
+                    <span class="info__span">03-09-1998</span>
+                </div>
+            </div>
+            <div class="container__info">
+                <div class="container__info--icon">
+                    <img src={location.src} alt="location" />
+                </div>
+                <div class="container__data">
+                    <label class="info__label">Ubicación</label>
+                    <span class="info__span">Medellín, Antioquia</span>
+                </div>
+            </div>
+            <div class="container__links">
+                <a
+                    href="https://github.com/SantiagoBA98?tab=repositories"
+                    target="_blank"
+                    rel="noopener noreferrer"
+                >
+                    <img src={github.src} alt="" />
+                </a>
+                <a
+                    href="https://www.linkedin.com/in/santiago-bohorquez-alzate-41710a1ba/"
+                    target="_blank"
+                    rel="noopener noreferrer"
+                >
+                    <img src={linkedin.src} alt="Linkedin" />
+                </a>
+            </div>
+        </section>
+    </aside>
+</div>
