--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -2,8 +2,10 @@
 interface Props {
 	title: string;
 }
-import Aside from '../components/Aside.astro';
+
 const { title } = Astro.props;
+import ContactInfo from "@components/Contact-info.astro";
+import Projects from "@components/projects/Projects.astro";
 ---
 
 <!doctype html>
@@ -13,13 +15,15 @@ const { title } = Astro.props;
 		<meta name="description" content="Astro description" />
 		<meta name="viewport" content="width=device-width" />
 		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-		<link rel="stylesheet" href="/public/assets/styles/styles.css">
+		<link rel="stylesheet" href="@assets/assets/styles/styles.css" />
 		<meta name="generator" content={Astro.generator} />
 		<title>{title}</title>
 	</head>
 	<body>
-		<Aside />
+		<main class="main">
+			<ContactInfo />
+			<Projects />
+		</main>
 		<slot />
 	</body>
 </html>
-
