--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,8 +1,5 @@
 ---
-import Layout from '../layouts/Layout.astro';
+import Layout from '@layouts/Layout.astro';
 ---
 
-<Layout title="Portafolio Santiago">
-	<main>
-	</main>
-</Layout>
+<Layout title="Portafolio Santiago" />
