--- a/src/components/projects/Projects.astro
+++ b/src/components/projects/Projects.astro
@@ -1,8 +1,10 @@
 ---
 import '@assets/assets/styles/styles.css'
 import Card from './Card.astro'
+import About from '@components/about/About.astro'
 ---
 
 <div class="main__content">
+    <About></About>
     <Card />
 </div>
