--- a/public/assets/styles/styles.css
+++ b/public/assets/styles/styles.css
@@ -2,16 +2,16 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  font-family: 'Onest Variable', 'Roboto' system-ui, sans-serif;
+  font-family: 'Onest Variable', system-ui, sans-serif;
 }
 
 .main {
   display: flex;
   flex-direction: row;
-  font-family: 'Onest Variable', 'Roboto' system-ui, sans-serif;
+  font-family: 'Onest Variable', system-ui, sans-serif;
   width: 100%;
   height: 100vh;
-  background: #FFFFFF;
+  background-image: radial-gradient(ellipse 80% 80% at 50% -20%, #d9d8ff80, #ffffffe6);
 }
 
 .main__content {
@@ -20,8 +20,8 @@
   width: 50vw;
   height: fit-content;
   margin-left: 30vw;
-  margin-top: 5vh;
-  /*border: 1px solid black;*/
+  margin-right: 20vw;
+  margin-top: 10vh;
 }
 
 .main__aside {
@@ -33,6 +33,7 @@
   position: fixed;
   display: flex;
   flex-direction: column;
+  overflow: auto;
   align-items: center;
   width: 20vw;
   height: 80vh;
@@ -111,16 +112,22 @@
   }
 }
 
+.projects{
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  gap: 20px;
+  width: 100%;
+}
+
 .card {
   display: flex;
   flex-direction: column;
-  width: 70%;
-  margin: 0 auto;
-  padding: 1.5rem;
-  border-radius: 5%;
-  background: #FFFFFF;
+  width: 30vw;
+  overflow: auto;
+  /*padding: 1.5rem;*/
+  background-color: transparent;
+  opacity: .9;
   /*box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;*/
-  box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
 
   & .card__header {
     display: flex;
@@ -129,10 +136,15 @@
     width: 100%;
 
     & .card__tag {
-      background: green;
-      font-weight: bold;
-      border-radius: 10%;
-      padding: 0.2rem;
+      border-radius: 9999px;
+      padding: 0.3rem;
+      padding-right: 1rem;
+      padding-left: 1rem;
+      border: 0.1rem solid #67a88f;
+      font-size: small;
+      background-color: #ddf7ec;
+      color: #5b8682;
+      opacity: 80;
     }
   }
 
@@ -140,7 +152,80 @@
     margin-top: 1.2rem;
   }
 
-  & .card__video {
-    margin: 0 auto;
+  & .description {
+    color: #1f2937;
+    font-size: 16px;
+    text-wrap: pretty;
+    line-height: 25px;
   }
+}
+
+.video {
+  width: 100%;
+  height: 70%;
+  margin: 0 auto;
+  margin-top: 1rem;
+}
+
+.container__about {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.about {
+  margin-bottom: 2rem;
+
+  & .card__tag {
+    border-radius: 9999px;
+    padding: 0.3rem;
+    border: 0.1rem solid #67a88f;
+    font-size: small;
+    background-color: #ddf7ec;
+    color: #5b8682;
+    opacity: 80;
+    line-height: 2rem;
+  }
+
+  & .card__tag:hover {
+    padding: 0.4rem;
+    opacity: .9;
+  }
+
+  & .about__text {
+    text-wrap: pretty;
+    line-height: 28px;
+    font-size: 20px;
+    opacity: .9;
+  }
+
+  & .h__welcome {
+    margin-bottom: 1rem;
+    margin-top: 0.5rem;
+    color: #000c;
+    font-weight: bold;
+
+  }
+
+  & .text__decorate {
+    /*color: #21c0ff;*/
+    color: #ffad34;
+    font-weight: bold;
+  }
+}
+
+.navbar {
+  display: inline-block;
+  margin: 0 auto;
+  width: fit-content;
+  height: fit-content;
+}
+
+.titles__sections {
+  display: flex;
+  flex-direction: row;
+  margin-bottom: 1.5rem;
+}
+.visual__icon {
+  margin-right: 0.6rem;
 }
