--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -5,7 +5,9 @@ interface Props {
 
 const { title } = Astro.props;
 import ContactInfo from "@components/Contact-info.astro";
+import Navbar from "@components/Navbar.astro";
 import Projects from "@components/projects/Projects.astro";
+import '@fontsource-variable/onest';
 ---
 
 <!doctype html>
