--- a/src/components/Contact-info.astro
+++ b/src/components/Contact-info.astro
@@ -1,5 +1,6 @@
 ---
 import "@assets/assets/styles/styles.css";
+import "@assets/assets/styles/mobile.css";
 import santi from "@assets/assets/img/santi.png";
 import email from "@assets/assets/img/email.png";
 import phone from "@assets/assets/img/phone.png";
