--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -18,6 +18,7 @@ import '@fontsource-variable/onest';
 		<meta name="viewport" content="width=device-width" />
 		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
 		<link rel="stylesheet" href="@assets/assets/styles/styles.css" />
+		<link rel="stylesheet" href="@assets/assets/styles/mobile.css" />
 		<meta name="generator" content={Astro.generator} />
 		<title>{title}</title>
 	</head>
