added experience section

--- a/src/components/projects/Projects.astro
+++ b/src/components/projects/Projects.astro
@@ -1,10 +1,12 @@
 ---
-import '@assets/assets/styles/styles.css'
-import Card from './Card.astro'
-import About from '@components/about/About.astro'
+import "@assets/assets/styles/styles.css";
+import Card from "./Card.astro";
+import About from "@components/about/About.astro";
+import Experience from "@components/about/Experience.astro";
 ---
 
 <div class="main__content">
-    <About></About>
+    <About />
+    <Experience />
     <Card />
 </div>
