--- a/public/assets/styles/styles.css
+++ b/public/assets/styles/styles.css
@@ -18,6 +18,7 @@
   display: flex;
   flex-direction: column;
   width: 50vw;
+  gap: 20px;
   height: fit-content;
   margin-left: 30vw;
   margin-right: 20vw;
@@ -112,17 +113,17 @@
   }
 }
 
-.projects{
+.projects {
   display: grid;
-  grid-template-columns: repeat(2, 1fr);
-  gap: 1.25rem;
+  grid-template-columns: repeat(1, 1fr);
+  gap: 20px;
   width: 100%;
 }
 
 .card {
   display: flex;
   flex-direction: column;
-  width: 30vw;
+  width: 50vw;
   overflow: auto;
   /*padding: 1.5rem;*/
   background-color: transparent;
@@ -174,7 +175,6 @@
 }
 
 .about {
-  margin-bottom: 2rem;
 
   & .card__tag {
     border-radius: 9999px;
@@ -189,6 +189,7 @@
 
   & .card__tag:hover {
     padding: 0.5rem;
+    font-size: 0.9rem;
     opacity: .9;
   }
 
@@ -227,6 +228,76 @@
   flex-direction: row;
   margin-bottom: 1.5rem;
 }
+
 .visual__icon {
   margin-right: 0.6rem;
+}
+
+/***************************************************/
+
+.container__experience {
+  display: flex;
+  flex-direction: row;
+  gap: 20px;
+}
+
+.experience__line {
+  position: relative;
+  width: 2px;
+  height: 160px;
+  background-color: #999999;
+}
+
+.circle {
+  position: absolute;
+  height: 10px;
+  width: 10px;
+  transform: translate(-40%, 150%);
+  border-radius: 9999999px;
+  background-color: #ffad34;
+}
+
+.container__text--experience {
+  display: flex;
+  flex-direction: row;
+  gap: 30px;
+  height: fit-content;
+
+  & .experience__header {
+    display: inherit;
+    flex-direction: column;
+    width: fit-content;
+    text-wrap: nowrap;
+
+    & .h1__experiencie {
+      font-size: 1em;
+      font-weight: bold;
+      color: #ffad34;
+    }
+
+    & .h2__experiencie {
+      font-size: 1em;
+      font-weight: bold;
+      opacity: .7;
+    }
+
+    & .h3__experiencie {
+      font-size: 0.7em;
+      font-weight: bold;
+      opacity: .7;
+    }
+  }
+
+  & .experience__text {
+    width: fit-content;
+    transform: translateY(-2.5%);
+
+    & .p__experiencie {
+      text-align: justify;
+      line-height: 1.75rem;
+      font-size: 1rem;
+      opacity: .9;
+    }
+  }
+
 }
