--- a/public/assets/styles/styles.css
+++ b/public/assets/styles/styles.css
@@ -239,6 +239,7 @@
   display: flex;
   flex-direction: row;
   gap: 20px;
+  justify-content: center;
 }
 
 .experience__line {
@@ -266,7 +267,7 @@
   & .experience__header {
     display: inherit;
     flex-direction: column;
-    width: fit-content;
+    width: 40%;
     text-wrap: nowrap;
 
     & .h1__experiencie {
@@ -289,7 +290,7 @@
   }
 
   & .experience__text {
-    width: fit-content;
+    width: 100%;
     transform: translateY(-2.5%);
 
     & .p__experiencie {
