--- a/src/components/about/Experience.astro
+++ b/src/components/about/Experience.astro
@@ -23,9 +23,8 @@ import JobIcon from "src/icons/Job-icon.astro";
             <p class="p__experiencie">
                 Como Backend Developer, implementé la metodología Scrum para
                 gestionar proyectos, desarrollando formularios, dashboards y
-                automatización de respuestas. Trabajé con tecnologías como PHP,
-                JavaScript, SQL, MySQL, y CSS, aplicando principios de SOLID,
-                POO y Clean Architecture.
+                automatización de respuestas con tecnologías como PHP,
+                JavaScript, SQL, MySQL, y CSS.
             </p>
         </div>
     </div>
